valid css comments

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-<!--
+/*
   Most of this style.css is copied from the pagelist plugin,
   keep it in line with that plugin...
--->
+*/
 
 div.dokuwiki table.pagelist,
 div.dokuwiki table.ul {
